--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -817,4 +817,12 @@
     <string name="lockscreen_cover_filter_blur">Blur</string>
     <string name="lockscreen_cover_filter_grayblur">Grayscale and blurred</string>
     <string name="lockscreen_cover_filter_gradientblur">Gradient Blur</string>
+
+    <!-- Per App aspect Ratio -->
+    <string name="action_save">Save</string>
+    <string name="aspect_ratio_category_title">Legacy app scaling</string>
+    <string name="aspect_ratio_apps_enabled_title">Force higher aspect ratio</string>
+    <string name="aspect_ratio_apps_enabled_summary">Allow the selected legacy apps to use full screen</string>
+    <string name="aspect_ratio_apps_list_title">Select apps</string>
+    <string name="aspect_ratio_apps_list_summary">Force full screen for these apps</string>
 </resources>
