--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -944,4 +944,12 @@
     <!-- Disabling FC notifications --> 
     <string name="enable_fc_notifications_title">Force close notifications</string>
     <string name="enable_fc_notifications_summary">Show a dialog when an application crashes</string>
+
+    <!-- Blink flashlight for incoming calls -->
+    <string name="incall_noti_category">Call Notification Options</string>
+    <string name="flashlight_on_call_title">Blink Flashlight on call</string>
+    <string name="flashlight_on_call_disabled">Disabled</string>
+    <string name="flashlight_on_call_not_dnd">Blink flashlight only in ringer mode</string>
+    <string name="flashlight_on_call_dnd">Blink flashlight only in DND mode</string>
+    <string name="flashlight_on_call_always">Always blink flashlight</string>
 </resources>
